--- a/cp9_02ex.html
+++ b/cp9_02ex.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8" />
        <title>1-９演習問題</title>
     <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="cp9_02ex.css" />
+    <link rel="stylesheet" href="cp9_02.css" />
   </head>
   <body>
     <header></header>
     <main>
-      
+      <div class="step-box">
+        <div class="step-img1"></div>
+        <span class="step-num">step1</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
+
+      <div class="step-box">
+        <div class="step-img2"></div>
+        <span class="step-num">step2</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
+
+      <div class="step-box">
+        <div class="step-img3"></div>
+        <span class="step-num">step3</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
+      </div>
     </main>
     </body>
     </html>
